--- a/boilerplate/public/index.css
+++ b/boilerplate/public/index.css
@@ -1,26 +1,41 @@
-/*Main Component START*/
 body {
   margin: 0;
-  width: 100vw;
-  height: 130vh;
 }
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2vmin;
+
+footer {
   background-color: rgb(90, 88, 88);
   color: white;
-  height: 10vh;
-  font-size: 3vmin;
-  position: fixed;
-  top: 0;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
   width: 100%;
 }
+
+.homeBody {
+  background-color: #34495e;
+  height: 150vh;
+  display: flex;
+  padding-top: 20vmin;
+  width: 100vw;
+  flex-direction: column;
+  align-items: center;
+}
+.navbar {
+  background-color: #34495e;
+  width: 100vw;
+  height: 10vmin;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 2;
+}
+
 .navLinks {
   display: flex;
   justify-content: space-evenly;
-  width: 60vw;
+  width: 40vw;
 }
 .navLink {
   text-decoration: none;
@@ -30,55 +45,76 @@ nav {
   cursor: pointer;
   color: lightgray;
 }
-.loginBtn {
-  padding: 0.5vmin;
-  width: 10vmin;
-  background-color: white;
-  border: none;
-  border-radius: 2px;
-}
-.loginBtn:hover {
-  cursor: pointer;
-  background-color: lightgray;
-  color: black;
-}
-footer {
-  background-color: rgb(90, 88, 88);
+.heading {
+  width: 80vmin;
+  font-size: 7vmin;
   color: white;
-  height: 20vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  line-height: 10vmin;
+  text-align: center;
+}
+.section1 {
   position: fixed;
-  bottom: 0;
-  width: 100%;
 }
 
-/*Main Component END*/
-/*Home Component START*/
-.homeBody {
-  background-color: white;
-  height: 130vh;
+.section2 {
+  position: absolute;
+  padding-top: 150vmin;
+}
+.about {
+  background-color: #2c3e50;
+  height: auto;
+  width: 100vw;
   display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.profilePic {
+  padding-top: 4vmin;
+  min-width: 10vmin;
+  max-width: 50vmin;
+  height: auto;
+}
+.aboutText {
+  min-width: 10vmin;
+  max-width: 50vmin;
+  padding: 2vmin;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: #bdc3c7;
+  font-size: 2.5vmin;
+}
+.workHeader {
+  width: 100vw;
+  height: 20vmin;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  line-height: 6vmin;
+  font-size: 5vmin;
+  opacity: 0.95;
 }
-/*Home Component END*/
-/*AboutComponent START*/
-.aboutBody {
-  background-color: white;
-  height: 130vh;
+.projectsDiv {
+  background-color: #ecf0f1;
+  height: auto;
+  width: 100vw;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
+  opacity: 0.97;
+  padding: 4vmin 0vmin 4vmin 0vmin;
 }
-/*About Component END*/
-/*Contact Component START*/
-.contactBody {
-  background-color: white;
-  height: 130vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+.projectTile {
+  background-color: #7f8c8d;
+  width: 40vmin;
+  height: 40vmin;
+  margin: 1vmin;
 }
-/*Contact Component END*/
+.projectTile:hover {
+  cursor: pointer;
+}
